Camisetas_interno main layout done

--- a/camisetas.html
+++ b/camisetas.html
@@ -43,139 +43,169 @@
 <body>
 <div class="container view-camisetas">
     <header class="col-xs-12 no-padding">
-        <div class="header-firstrow col-xs-5 no-padding pull-right">
-            <ul class="col-xs-12 no-padding ul-firstrow">
-                <li class="col-xs-3">
-                    <a href="" class="ff-lato">Login</a>
-                </li>
-                <li class="col-xs-3">
-                    <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
-                </li>
-                <li class="col-xs-5 no-padding-right">
-                    <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
-                </li>
-                <li class="col-xs-1 no-padding li-lupa">
-                    <i class="fa fa-search"></i>
-                </li>
-            </ul>
-        </div>
-        <div class="header-firstrow left col-xs-7 no-padding pull-left">
-            <ul class="col-xs-12 no-padding ul-firstrow">
-                <li class="col-xs-4 ff-lato vantagens">
-                    Frete Grátis <i class="fa fa-truck"></i>
-                </li>
-                <li class="col-xs-4 ff-lato vantagens">
-                    Troca Garantida <i class="fa fa-exchange"></i>
-                </li>
-                <li class="col-xs-4 ff-lato vantagens">
-                    Tamanhos Variados <i class="fa fa-tags"></i>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-xs-12 no-padding logo-box">
-            <div class="col-xs-6 no-padding">
-                <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+        <!-- DESKTOP HEADER -->
+        <div class="desktop-header col-xs-12 no-padding hidden-xs hidden-sm">
+            <div class="header-firstrow col-xs-5 no-padding pull-right">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-3">
+                        <a href="" class="ff-lato">Login</a>
+                    </li>
+                    <li class="col-xs-3">
+                        <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
+                    </li>
+                    <li class="col-xs-5 no-padding-right">
+                        <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
+                    </li>
+                    <li class="col-xs-1 no-padding li-lupa">
+                        <i class="fa fa-search"></i>
+                    </li>
+                </ul>
             </div>
-            <div class="col-xs-6 no-padding redes-sociais">
-                <ul class="col-xs-12 no-padding">
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-facebook-square transition"></i></a>
+            <div class="header-firstrow left col-xs-7 no-padding pull-left">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Frete Grátis <i class="fa fa-truck"></i>
                     </li>
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-instagram transition"></i></a>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Troca Garantida <i class="fa fa-exchange"></i>
                     </li>
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-pinterest transition"></i></a>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Tamanhos Variados <i class="fa fa-tags"></i>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-xs-12 no-padding logo-box">
+                <div class="col-xs-6 no-padding">
+                    <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+                </div>
+                <div class="col-xs-6 no-padding redes-sociais">
+                    <ul class="col-xs-12 no-padding">
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-facebook-square transition"></i></a>
+                        </li>
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-instagram transition"></i></a>
+                        </li>
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-pinterest transition"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-xs-12 no-padding bg-white">
+                <ul class="col-xs-12 no-padding ul-menu pull-right">
+                    <a href="index.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Home 
+                        </li>
+                    </a>
+                    <a href="camisetas.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Camisetas 
+                        </li>
+                    </a>
+                    <a href="uptoyou.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Up to You 
+                        </li>
+                    </a>
+                    <a href="girlgang.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Girl Gang <i class="fa fa-venus"></i>
+                        </li>
+                    </a>
+                    <a href="mural.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Mural 
+                        </li>
+                    </a>
+                    <a href="sobre.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Sobre a Canvas
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+        <!-- DESKTOP HEADER END -->
+
+        <!-- MOBILE HEADER -->
+        <div class="mobile-header col-xs-12 no-padding hidden-md hidden-lg">
+            <div class="col-xs-12 no-padding">
+                <center>
+                    <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+                </center>
+            </div>
+            <div class="menu-box">
+                <i class="fa fa-bars"></i>
+            </div>
+            <div class="features-box col-xs-12 no-padding">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Frete Grátis <i class="fa fa-truck"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Troca Garantida <i class="fa fa-exchange"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Tamanhos Variados <i class="fa fa-tags"></i>
                     </li>
                 </ul>
             </div>
         </div>
-
-        <div class="col-xs-12 no-padding bg-white">
-            <ul class="col-xs-12 no-padding ul-menu pull-right">
-                <a href="index.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Home 
-                    </li>
-                </a>
-                <a href="camisetas.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Camisetas 
-                    </li>
-                </a>
-                <a href="uptoyou.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Up to You 
-                    </li>
-                </a>
-                <a href="girlgang.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Girl Gang <i class="fa fa-venus"></i>
-                    </li>
-                </a>
-                <a href="mural.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Mural 
-                    </li>
-                </a>
-                <a href="sobre.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Sobre a Canvas
-                    </li>
-                </a>
-            </ul>
-        </div>
+        <!-- MOBILE HEADER END -->
     </header>
 
     <section class="listagem-camisetas content-section col-xs-12 no-padding">
         <ul class="col-xs-12 no-padding">
-            <li class="item-prod col-xs-3 transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
+                    <a href="camisetas_interno.html">
                         <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="">
+                <a href="camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
                         <p class="truncate">Valor: 50R$</p>
                     </div>
                 </a>
             </li>
-            <li class="item-prod col-xs-3 transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
+                    <a href="camisetas_interno.html">
                         <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="">
+                <a href="camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
                         <p class="truncate">Valor: 50R$</p>
                     </div>
                 </a>
             </li>
-            <li class="item-prod col-xs-3 transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
+                    <a href="camisetas_interno.html">
                         <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="">
+                <a href="camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
                         <p class="truncate">Valor: 50R$</p>
                     </div>
                 </a>
             </li>
-            <li class="item-prod col-xs-3 transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
+                    <a href="camisetas_interno.html">
                         <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="">
+                <a href="camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
                         <p class="truncate">Valor: 50R$</p>
