Girlgang main layout done

--- a/camisetas_interno.html
+++ b/camisetas_interno.html
@@ -142,7 +142,11 @@
             </ul>
 
             <p class="custom-texto">Descrição:</p> 
-            <p class="ff-lato">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="ff-lato">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+            <p class="custom-texto">Artista:</p> 
+            <p class="ff-lato">Bruna Farias</p>
             <center><button class="btn btn-comprar ff-lato transition">Comprar</button></center>
             <p class="custom-texto">Composição:</p> 
             <p class="ff-lato">93% Viscose, 7% Elastano.</p>
@@ -151,7 +155,7 @@
         <div class="parte-imagens col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div id="owl-venda" class="col-xs-12 no-padding">
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/1.1.png" alt="Owl Image">
+                    <img src="public/img/1.1.png" alt="">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
                     <img src="public/img/1.2.png" alt="Owl Image">
