--- a/girlgang.html
+++ b/girlgang.html
@@ -43,7 +43,7 @@
     </head>
 
 <body>
-<div class="container view-index">
+<div class="container view-girlgang">
     <header class="col-xs-12 no-padding">
         <div class="header-firstrow col-xs-5 no-padding pull-right">
             <ul class="col-xs-12 no-padding ul-firstrow">
@@ -129,6 +129,52 @@
             </ul>
         </div>
     </header>
+
+    <div class="col-xs-12 no-padding">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="public/img/ban3.png" alt="Banner Girl Gang">
+                </div>
+                <div class="item">
+                    <img src="public/img/ban3.png" alt="Banner Girl Gang">
+                </div>
+                <div class="item">
+                    <img src="public/img/ban3.png" alt="Banner Girl Gang">
+                </div>
+            </div>
+
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+
+    <section class="content-section col-xs-12 no-padding">
+         <div class="col-xs-12 no-padding titulo-section-box">
+            <span class="ff-lato titulo-section">GIRL GANG</span>
+            <p class="ff-lato sub-frase">sub frase</p>
+        </div>
+        <p class="col-xs-12 ff-lato texto-principal">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </section>
 </div>
 
 <footer class="col-xs-12 no-padding">
