Minor layout fixes

--- a/camisetas.html
+++ b/camisetas.html
@@ -168,8 +168,8 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
+                        <p class="nome truncate">GirlGang</p>
+                        <p class="valor truncate">Valor: 50,00R$</p>
                     </div>
                 </a>
             </li>
@@ -181,8 +181,8 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
+                        <p class="nome truncate">Camiseta</p>
+                        <p class="valor truncate">Valor: 55,00R$</p>
                     </div>
                 </a>
             </li>
@@ -194,8 +194,8 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
+                        <p class="nome truncate">Título</p>
+                        <p class="valor truncate">Valor: 50,00R$</p>
                     </div>
                 </a>
             </li>
@@ -207,8 +207,8 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
+                        <p class="nome truncate">Nome Camiseta</p>
+                        <p class="valor truncate">Valor: 50,00R$</p>
                     </div>
                 </a>
             </li>
