Added cupom input field

--- a/camisetas_interno.html
+++ b/camisetas_interno.html
@@ -148,7 +148,7 @@
             <p class="custom-texto">Artista:</p> 
             <p class="ff-lato">Bruna Farias</p>
             <center><button class="btn btn-comprar ff-lato transition">Comprar</button></center>
-            <center><input type="text" class="cupom" name="cupom" placeholder="CUPOM DESCONTO"></center>
+            <center><input type="text" class="cupom transition" name="cupom" placeholder="CUPOM DESCONTO"></center>
             <p class="custom-texto">Composição:</p> 
             <p class="ff-lato">93% Viscose, 7% Elastano.</p>
             <button type="button" class="btn btn-medidas ff-lato transition" data-toggle="modal" data-target=".modal-venda">Tabela de Medidas</button>
