--- a/camisetas.html
+++ b/camisetas.html
@@ -77,7 +77,7 @@
 
             <div class="col-xs-12 no-padding logo-box">
                 <div class="col-xs-6 no-padding">
-                    <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+                    <a href="index.html"><img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo"></a>
                 </div>
                 <div class="col-xs-6 no-padding redes-sociais">
                     <ul class="col-xs-12 no-padding">
