Placing final images

--- a/camisetas.html
+++ b/camisetas.html
@@ -163,7 +163,7 @@
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="camisetas_interno.html">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                        <img src="public/img/camisetas/c_faca_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
                 <a href="camisetas_interno.html">
@@ -176,7 +176,7 @@
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="camisetas_interno.html">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                        <img src="public/img/camisetas/c_gasolina_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
                 <a href="camisetas_interno.html">
@@ -189,7 +189,7 @@
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="camisetas_interno.html">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                        <img src="public/img/camisetas/c_lenco_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
                 <a href="camisetas_interno.html">
@@ -202,7 +202,7 @@
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="camisetas_interno.html">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                        <img src="public/img/camisetas/c_martelo_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
                 <a href="camisetas_interno.html">
