--- a/camisetas_interno.html
+++ b/camisetas_interno.html
@@ -137,8 +137,8 @@
             <ul class="col-xs-12 no-padding">
                 <li class="col-xs-4 cor preto" onclick="slideTo(0)"></li>
                 <li class="col-xs-4 cor branco" onclick="slideTo(1)"></li>
-                <li class="col-xs-4 cor cinza" onclick="slideTo(2)"></li>
-                <li class="col-xs-4 cor vermelho" onclick="slideTo(3)"></li>
+                <li class="col-xs-4 cor cinza-chumbo" onclick="slideTo(2)"></li>
+                <li class="col-xs-4 cor cinza-mescla" onclick="slideTo(3)"></li>
             </ul>
 
             <p class="custom-texto">Descrição:</p> 
@@ -156,37 +156,37 @@
         <div class="parte-imagens col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div id="owl-venda" class="col-xs-12 no-padding">
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/1.1.png" alt="">
+                    <img src="public/img/camisetas/c_faca_principal.jpg" alt="">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/1.2.png" alt="Owl Image">
+                    <img src="public/img/camisetas/c_faca_branca.jpg" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/1.3.png" alt="Owl Image">
+                    <img src="public/img/camisetas/c_faca_chumbo.jpg" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/1.4.png" alt="Owl Image">
+                    <img src="public/img/camisetas/c_faca_mescla.jpg" alt="Owl Image">
                 </div>
             </div>
             <ul class="owl-thumbs col-xs-12 no-padding">
                 <li class="col-xs-3 no-padding-left" onclick="slideTo(0)">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/1.1.png" alt="Owl Image">
+                        <img src="public/img/camisetas/c_faca_principal.jpg" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(1)">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/1.2.png" alt="Owl Image">
+                        <img src="public/img/camisetas/c_faca_branca.jpg" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(2)">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/1.3.png" alt="Owl Image">
+                        <img src="public/img/camisetas/c_faca_chumbo.jpg" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-right" onclick="slideTo(3)">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/1.4.png" alt="Owl Image">
+                        <img src="public/img/camisetas/c_faca_mescla.jpg" alt="Owl Image">
                     </div>
                 </li>
             </ul>
