Minor text fixes

--- a/camisetas.html
+++ b/camisetas.html
@@ -168,7 +168,7 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="nome truncate">GirlGang</p>
+                        <p class="nome truncate">Camiseta Faca</p>
                         <p class="valor truncate">Valor: 50,00R$</p>
                     </div>
                 </a>
@@ -181,7 +181,7 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="nome truncate">Camiseta</p>
+                        <p class="nome truncate">Camiseta Gasolina</p>
                         <p class="valor truncate">Valor: 55,00R$</p>
                     </div>
                 </a>
@@ -194,7 +194,7 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="nome truncate">Título</p>
+                        <p class="nome truncate">Camiseta Lenço</p>
                         <p class="valor truncate">Valor: 50,00R$</p>
                     </div>
                 </a>
@@ -207,7 +207,7 @@
                 </div>
                 <a href="camisetas_interno.html">
                     <div class="item-info transition">
-                        <p class="nome truncate">Nome Camiseta</p>
+                        <p class="nome truncate">Camiseta Martelo</p>
                         <p class="valor truncate">Valor: 50,00R$</p>
                     </div>
                 </a>
