--- a/camisetas.html
+++ b/camisetas.html
@@ -116,11 +116,6 @@
                             Girl Gang <i class="fa fa-venus"></i>
                         </li>
                     </a>
-                    <a href="mural.html" class="no-padding">
-                        <li class="col-xs-2  transition ff-lato">
-                            Mural 
-                        </li>
-                    </a>
                     <a href="sobre.html" class="no-padding">
                         <li class="col-xs-2  transition ff-lato">
                             Sobre a Canvas
@@ -162,53 +157,53 @@
         <ul class="col-xs-12 no-padding">
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="camisetas_interno.html">
+                    <a href="internas/camisetas_interno.html">
                         <img src="public/img/camisetas/c_faca_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="camisetas_interno.html">
+                <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Faca</p>
-                        <p class="valor truncate">Valor: 50,00R$</p>
+                        <p class="valor truncate">Valor: R$ 50,00</p>
                     </div>
                 </a>
             </li>
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="camisetas_interno.html">
+                    <a href="internas/camisetas_interno2.html">
                         <img src="public/img/camisetas/c_gasolina_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="camisetas_interno.html">
+                <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Gasolina</p>
-                        <p class="valor truncate">Valor: 55,00R$</p>
+                        <p class="valor truncate">Valor: R$ 55,00</p>
                     </div>
                 </a>
             </li>
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="camisetas_interno.html">
+                    <a href="internas/camisetas_interno3.html">
                         <img src="public/img/camisetas/c_lenco_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="camisetas_interno.html">
+                <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Lenço</p>
-                        <p class="valor truncate">Valor: 50,00R$</p>
+                        <p class="valor truncate">Valor: R$ 50,00</p>
                     </div>
                 </a>
             </li>
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="camisetas_interno.html">
+                    <a href="internas/camisetas_interno4.html">
                         <img src="public/img/camisetas/c_martelo_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
-                <a href="camisetas_interno.html">
+                <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Martelo</p>
-                        <p class="valor truncate">Valor: 50,00R$</p>
+                        <p class="valor truncate">Valor: R$ 55,00</p>
                     </div>
                 </a>
             </li>
