--- a/girlgang.html
+++ b/girlgang.html
@@ -116,11 +116,6 @@
                         Girl Gang <i class="fa fa-venus"></i>
                     </li>
                 </a>
-                <a href="mural.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Mural 
-                    </li>
-                </a>
                 <a href="sobre.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Sobre a Canvas
@@ -130,33 +125,81 @@
         </div>
     </header>
 
-    <div class="col-xs-12 no-padding">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="public/img/ban3.png" alt="Banner Girl Gang">
-                </div>
-                <div class="item">
-                    <img src="public/img/ban3.png" alt="Banner Girl Gang">
-                </div>
-                <div class="item">
-                    <img src="public/img/ban3.png" alt="Banner Girl Gang">
-                </div>
+    <div class="parte-imagens col-xs-12 no-padding">
+        <div id="owl-gang" class="col-xs-12 no-padding">
+            <div class="col-xs-12 no-padding">
+                <img src="public/img/ban3.png" alt="">
             </div>
-
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="col-xs-12 col-xs-12 img-venda">
+                <img src="public/img/ban3.png" alt="Owl Image">
+            </div>
+            <div class="col-xs-12 col-xs-12 img-venda">
+                <img src="public/img/ban3.png" alt="Owl Image">
+            </div>
+            <div class="col-xs-12 col-xs-12 img-venda">
+                <img src="public/img/ban3.png" alt="Owl Image">
+            </div>
         </div>
     </div>
 
     <section class="content-section col-xs-12 no-padding">
+        <div id="owl-miniaturas" class="owl-thumbs col-xs-12 no-padding">
+            <div class="col-xs-12 no-padding-left" onclick="slideTo(0, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-half" onclick="slideTo(1, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-half" onclick="slideTo(2, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(3, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(4, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(5, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(6, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(7, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(8, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(9, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+            <div class="col-xs-12 no-padding-right" onclick="slideTo(10, '#owl-gang')">
+                <div class="col-xs-12 thumb-gang imgLiquid imgLiquidFill">
+                    <img src="public/img/ban3.png" alt="Owl Image">
+                </div>
+            </div>
+        </div>
          <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">GIRL GANG</span>
             <p class="ff-lato sub-frase">sub frase</p>
@@ -174,6 +217,7 @@
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/8tPnX7OPo0Q" frameborder="0" allowfullscreen></iframe></center>
     </section>
 </div>
 
