--- a/internas/camisetas_interno2.html
+++ b/internas/camisetas_interno2.html
@@ -19,26 +19,26 @@
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Marca de camisetas com estampas criadas por artistas mulheres." />
         <meta property="og:url" content="pedr0rocha.github.io/canvas/camisetas_interno.html"/> 
-        <meta property="og:image" content="assets/img/logo.png" />
+        <meta property="og:image" content="../assets/img/logo.png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
         <meta property="og:locale" content="pt_BR" />
 
         <!-- IMPORTING CSS FILES -->
-        <link type="text/css" href="public/css/custom.css" rel="stylesheet" type="text/css">
-        <link type="text/css" href="public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link type="text/css" rel="stylesheet" href="public/css/font-awesome/css/font-awesome.min.css" media="screen,projection">
-        <link type="text/css" href="public/js/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css">
-        <link type="text/css" href="public/js/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css">
+        <link type="text/css" href="../public/css/custom.css" rel="stylesheet" type="text/css">
+        <link type="text/css" href="../public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link type="text/css" rel="stylesheet" href="../public/css/font-awesome/css/font-awesome.min.css" media="screen,projection">
+        <link type="text/css" href="../public/js/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css">
+        <link type="text/css" href="../public/js/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css">
 
         
         <!-- IMPORTING JS FILES -->
-        <script src="public/js/jquery/dist/jquery.min.js"></script>
-        <script src="public/js/imgLiquid-min.js"></script>
-        <script src="public/js/swiper.jquery.min.js"></script>
-        <script src="public/js/custom.js"></script>
-        <script src="public/js/bootstrap.min.js"></script>
-        <script src="public/js/owl-carousel/owl.carousel.js"></script>
+        <script src="../public/js/jquery/dist/jquery.min.js"></script>
+        <script src="../public/js/imgLiquid-min.js"></script>
+        <script src="../public/js/swiper.jquery.min.js"></script>
+        <script src="../public/js/custom.js"></script>
+        <script src="../public/js/bootstrap.min.js"></script>
+        <script src="../public/js/owl-carousel/owl.carousel.js"></script>
     </head>
 <body>
 <div class="container view-caminterno">
@@ -75,7 +75,7 @@
 
         <div class="col-xs-12 no-padding logo-box">
             <div class="col-xs-6 no-padding">
-                <a href="index.html"><img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo"></a>
+                <a href="../index.html"><img src="../public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo"></a>
             </div>
             <div class="col-xs-6 no-padding redes-sociais">
                 <ul class="col-xs-12 no-padding">
@@ -94,32 +94,27 @@
 
         <div class="col-xs-12 no-padding bg-white">
             <ul class="col-xs-12 no-padding ul-menu pull-right">
-                <a href="index.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
+                <a href="../index.html" class="no-padding">
+                    <li class="col-xs-2 transition ff-lato">
                         Home 
                     </li>
                 </a>
-                <a href="camisetas.html" class="no-padding">
+                <a href="../camisetas.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Camisetas 
                     </li>
                 </a>
-                <a href="uptoyou.html" class="no-padding">
+                <a href="../uptoyou.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Up to You 
                     </li>
                 </a>
-                <a href="girlgang.html" class="no-padding">
+                <a href="../girlgang.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Girl Gang <i class="fa fa-venus"></i>
                     </li>
                 </a>
-                <a href="mural.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Mural 
-                    </li>
-                </a>
-                <a href="sobre.html" class="no-padding">
+                <a href="../sobre.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Sobre a Canvas
                     </li>
@@ -130,15 +125,24 @@
 
     <section class="content-section col-xs-12 no-padding">
         <div class="parte-info col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h3 class="ff-lato">Preço: 50,00 R$</h3>
-            <p class="custom-texto">ou 2x de 25,00 R$</p>
+            <h3 class="ff-lato">Preço: R$ 50,00</h3>
+            <p class="custom-texto">ou 2x de R$ 25,00</p>
 
             <p class="custom-texto">Selecione a cor:</p>
             <ul class="col-xs-12 no-padding">
-                <li class="col-xs-4 cor preto" onclick="slideTo(0)"></li>
-                <li class="col-xs-4 cor branco" onclick="slideTo(1)"></li>
-                <li class="col-xs-4 cor cinza-chumbo" onclick="slideTo(2)"></li>
-                <li class="col-xs-4 cor cinza-mescla" onclick="slideTo(3)"></li>
+                <li class="col-xs-4 cor cinza-mescla" onclick="slideTo(0, '#owl-venda')"></li>
+                <li class="col-xs-4 cor preto" onclick="slideTo(1, '#owl-venda')"></li>
+                <li class="col-xs-4 cor cinza-chumbo" onclick="slideTo(2, '#owl-venda')"></li>
+                <li class="col-xs-4 cor branco" onclick="slideTo(3, '#owl-venda')"></li>
+            </ul>
+
+            <p class="custom-texto">Selecione o tamanho:</p>
+            <ul class="col-xs-12 no-padding">
+                <li id="blocoTamanho1" class="col-xs-4 tamanho ff-lato selected transition" onclick="selectTamanho(1)">PP</li>
+                <li id="blocoTamanho2" class="col-xs-4 tamanho ff-lato transition" onclick="selectTamanho(2)">P</li>
+                <li id="blocoTamanho3" class="col-xs-4 tamanho ff-lato transition" onclick="selectTamanho(3)">M</li>
+                <li id="blocoTamanho4" class="col-xs-4 tamanho ff-lato transition" onclick="selectTamanho(4)">G</li>
+                <li id="blocoTamanho5" class="col-xs-4 tamanho ff-lato transition" onclick="selectTamanho(5)">GG</li>
             </ul>
 
             <p class="custom-texto">Descrição:</p> 
@@ -151,42 +155,42 @@
             <center><input type="text" class="cupom transition" name="cupom" placeholder="CUPOM DESCONTO"></center>
             <p class="custom-texto">Composição:</p> 
             <p class="ff-lato">93% Viscose, 7% Elastano.</p>
-            <button type="button" class="btn btn-medidas ff-lato transition" data-toggle="modal" data-target=".modal-venda">Tabela de Medidas</button>
+            <button type="button" class="btn btn-medidas ff-lato transition text-uppercase" data-toggle="modal" data-target=".modal-venda">Tabela de Medidas</button>
         </div>
         <div class="parte-imagens col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div id="owl-venda" class="col-xs-12 no-padding">
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/camisetas/c_faca_principal.jpg" alt="">
+                    <img src="../public/img/camisetas/c_gasolina_principal.jpg" alt="">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/camisetas/c_faca_branca.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_gasolina_preta.jpg" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/camisetas/c_faca_chumbo.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_gasolina_chumbo.jpg" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="public/img/camisetas/c_faca_mescla.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_gasolina_branca.jpg" alt="Owl Image">
                 </div>
             </div>
             <ul class="owl-thumbs col-xs-12 no-padding">
-                <li class="col-xs-3 no-padding-left" onclick="slideTo(0)">
+                <li class="col-xs-3 no-padding-left" onclick="slideTo(0, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/camisetas/c_faca_principal.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_gasolina_principal.jpg" alt="Owl Image">
                     </div>
                 </li>
-                <li class="col-xs-3 no-padding-half" onclick="slideTo(1)">
+                <li class="col-xs-3 no-padding-right" onclick="slideTo(1, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/camisetas/c_faca_branca.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_gasolina_preta.jpg" alt="Owl Image">
                     </div>
                 </li>
-                <li class="col-xs-3 no-padding-half" onclick="slideTo(2)">
+                <li class="col-xs-3 no-padding-half" onclick="slideTo(2, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/camisetas/c_faca_chumbo.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_gasolina_chumbo.jpg" alt="Owl Image">
                     </div>
                 </li>
-                <li class="col-xs-3 no-padding-right" onclick="slideTo(3)">
+                <li class="col-xs-3 no-padding-half" onclick="slideTo(3, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="public/img/camisetas/c_faca_mescla.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_gasolina_branca.jpg" alt="Owl Image">
                     </div>
                 </li>
             </ul>
@@ -201,7 +205,7 @@
                 <div class="detalhe-complemento cima"></div>
             </div>
             
-            <img src="public/img/canvaslogo2.png" class="logo-footer no-padding img-responsive center-block" alt="Canvas Logo Footer" title="Canvas Logo Footer">
+            <img src="../public/img/canvaslogo2.png" class="logo-footer no-padding img-responsive center-block" alt="Canvas Logo Footer" title="Canvas Logo Footer">
             <ul class="col-xs-12 no-padding">
                 <a href="" class="col-xs-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
@@ -243,7 +247,7 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content modal-content-votacao ff-lato">
             Tabela de Medidas
-            <img src="public/img/tabela.png" alt="Tabela de Medidas" class="img-responsive">
+            <img src="../public/img/tabela.png" alt="Tabela de Medidas" class="img-responsive">
             <button class="btn btn-fechar-votacao col-xs-12" data-dismiss="modal">Fechar</button>
         </div>
     </div>
