--- a/internas/camisetas_interno2.html
+++ b/internas/camisetas_interno2.html
@@ -6,6 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
         <![endif]-->
 
+        <meta name="author" content="Pedro Rocha" />
+        <meta name="reply-to" content="pedrovqrocha@gmail.com" />
+        <link rel="icon" type="image/ico" href="assets/img/favicon.ico" />
         <meta charset="uft8">
         <meta name="keywords" content="Camisetas, Estampas, Mulheres" />
         <meta name="revisit-after" content="2 days" />
