--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <!--[if gte IE 8]>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
     <![endif]-->
-
-    <meta charset="uft8">
+    <meta name="author" content="Pedro Rocha" />
+    <meta name="reply-to" content="pedrovqrocha@gmail.com" />
+    <link rel="icon" type="image/ico" href="public/img/favicon.ico" />
+    <meta charset="uft8" />
     <meta name="keywords" content="Camisetas, Estampas, Mulheres" />
     <meta name="revisit-after" content="2 days" />
     <meta name="page-topic" content="Home Canvas" />
@@ -19,7 +21,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Marca de camisetas com estampas criadas por artistas mulheres." />
     <meta property="og:url" content="pedr0rocha.github.io/canvas"/> 
-    <meta property="og:image" content="assets/img/logo.png" />
+    <meta property="og:image" content="public/img/logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="pt_BR" />
