Minor css to copyrights text, removed some placeholder images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <![endif]-->
     <meta name="author" content="Pedro Rocha" />
     <meta name="reply-to" content="pedrovqrocha@gmail.com" />
-    <link rel="icon" type="image/ico" href="public/img/favicon.ico" />
+    <link rel="icon" type="image/png" href="public/img/favicon.png" />
     <meta charset="uft8" />
     <meta name="keywords" content="Camisetas, Estampas, Mulheres" />
     <meta name="revisit-after" content="2 days" />
@@ -406,7 +406,7 @@
             </div>
         </div>
     </div>
-    <p class="ff-lato text-center">© Copyright 2016, Todos os direitos reservados - Canvas</p>
+    <p class="ff-lato text-center texto-direitos">© Copyright 2016, Todos os direitos reservados - Canvas</p>
     <p class="ff-lato pull-right copyright">Desenvolvido por <a href="mailto:pedrovqrocha@gmail.com">Pedro Rocha</a></p>
 </footer>
 
