--- a/girlgang.html
+++ b/girlgang.html
@@ -265,7 +265,7 @@
             </div>
         </div>
     </div>
-    <p class="ff-lato text-center">© Copyright 2016, Todos os direitos reservados - Canvas</p>
+    <p class="ff-lato text-center texto-direitos">© Copyright 2016, Todos os direitos reservados - Canvas</p>
     <p class="ff-lato pull-right copyright">Desenvolvido por <a href="mailto:pedrovqrocha@gmail.com">Pedro Rocha</a></p>
 </footer>
 
