Added new banner to index page

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                 <div class="item">
                     <img src="public/img/banner_3.png" alt="Banner Girl Gang">
                 </div>
+                <div class="item">
+                    <img src="public/img/banner_4.png" alt="Banner Girl Gang">
+                </div>
             </div>
 
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
