Reworking layout, added correct pricing

--- a/camisetas.html
+++ b/camisetas.html
@@ -8,7 +8,7 @@
 
         <meta name="author" content="Pedro Rocha" />
         <meta name="reply-to" content="pedrovqrocha@gmail.com" />
-        <link rel="icon" type="image/ico" href="public/img/favicon.ico" />
+        <link rel="icon" type="image/png" href="public/img/favicon.png" />
         <meta charset="uft8">
         <meta name="keywords" content="Camisetas, Estampas, Mulheres" />
         <meta name="revisit-after" content="2 days" />
@@ -167,7 +167,7 @@
                 <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Faca</p>
-                        <p class="valor truncate">Valor: R$ 50,00</p>
+                        <p class="valor truncate">Valor: R$ 59,90</p>
                     </div>
                 </a>
             </li>
@@ -180,7 +180,7 @@
                 <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Gasolina</p>
-                        <p class="valor truncate">Valor: R$ 55,00</p>
+                        <p class="valor truncate">Valor: R$ 59,90</p>
                     </div>
                 </a>
             </li>
@@ -193,7 +193,7 @@
                 <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Lenço</p>
-                        <p class="valor truncate">Valor: R$ 50,00</p>
+                        <p class="valor truncate">Valor: R$ 59,90</p>
                     </div>
                 </a>
             </li>
@@ -206,11 +206,14 @@
                 <a href="internas/camisetas_interno.html">
                     <div class="item-info transition">
                         <p class="nome truncate">Camiseta Martelo</p>
-                        <p class="valor truncate">Valor: R$ 55,00</p>
+                        <p class="valor truncate">Valor: R$ 59,90</p>
                     </div>
                 </a>
             </li>
         </ul>
+        <div class="col-xs-12">
+            <p class="ff-flato"><strong>*</strong>Todas as camisetas estão disponíveis nas cores: preta, cinza chumbo, cinza mescla e branca.</p>
+        </div>
     </section>
 </div>
 
