--- a/girlgang.html
+++ b/girlgang.html
@@ -8,7 +8,7 @@
 
     <meta name="author" content="Pedro Rocha" />
     <meta name="reply-to" content="pedrovqrocha@gmail.com" />
-    <link rel="icon" type="image/ico" href="public/img/favicon.ico" />
+    <link rel="icon" type="image/png" href="public/img/favicon.png" />
     <meta charset="uft8">
     <meta name="keywords" content="Camisetas, Estampas, Mulheres" />
     <meta name="revisit-after" content="2 days" />
