--- a/internas/camisetas_interno2.html
+++ b/internas/camisetas_interno2.html
@@ -8,7 +8,7 @@
 
         <meta name="author" content="Pedro Rocha" />
         <meta name="reply-to" content="pedrovqrocha@gmail.com" />
-        <link rel="icon" type="image/ico" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/png" href="../public/img/favicon.png" />
         <meta charset="uft8">
         <meta name="keywords" content="Camisetas, Estampas, Mulheres" />
         <meta name="revisit-after" content="2 days" />
@@ -128,8 +128,8 @@
 
     <section class="content-section col-xs-12 no-padding">
         <div class="parte-info col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h3 class="ff-lato">Preço: R$ 50,00</h3>
-            <p class="custom-texto">ou 2x de R$ 25,00</p>
+            <h3 class="ff-lato">Preço: R$ 59,90</h3>
+            <p class="custom-texto">ou 2x de R$ 29,95</p>
 
             <p class="custom-texto">Selecione a cor:</p>
             <ul class="col-xs-12 no-padding">
@@ -148,17 +148,13 @@
                 <li id="blocoTamanho5" class="col-xs-4 tamanho ff-lato transition" onclick="selectTamanho(5)">GG</li>
             </ul>
 
-            <p class="custom-texto">Descrição:</p> 
-            <p class="ff-lato">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+            <p class="custom-texto">Descrição:</p>
+            <p class="ff-lato">Camiseta 100% algodão estampada artesanalmente pelo processo de serigrafia.</p>
             <p class="custom-texto">Artista:</p> 
-            <p class="ff-lato">Bruna Farias</p>
+            <p class="ff-lato">Vitória Santos Cruz</p>
+            <button type="button" class="btn btn-medidas ff-lato transition text-uppercase" data-toggle="modal" data-target=".modal-venda">Tabela de Medidas</button>
             <center><button class="btn btn-comprar ff-lato transition">Comprar</button></center>
             <center><input type="text" class="cupom transition" name="cupom" placeholder="CUPOM DESCONTO"></center>
-            <p class="custom-texto">Composição:</p> 
-            <p class="ff-lato">93% Viscose, 7% Elastano.</p>
-            <button type="button" class="btn btn-medidas ff-lato transition text-uppercase" data-toggle="modal" data-target=".modal-venda">Tabela de Medidas</button>
         </div>
         <div class="parte-imagens col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div id="owl-venda" class="col-xs-12 no-padding">
