Replacing the placeholders (duh) text and image, owl carousel is now jumping from page to page (2 by 2), changed Tabela De Medidas modal to md, changed header background image

--- a/internas/camisetas_interno4.html
+++ b/internas/camisetas_interno4.html
@@ -162,10 +162,10 @@
                     <img src="../public/img/camisetas/c_martelo_principal.jpg" alt="">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="../public/img/camisetas/c_martelo_preta.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_martelo_preta.png" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="../public/img/camisetas/c_martelo_mescla.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_martelo_mescla.png" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
                     <img src="../public/img/camisetas/c_martelo_branca.jpg" alt="Owl Image">
@@ -179,12 +179,12 @@
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(1, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="../public/img/camisetas/c_martelo_preta.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_martelo_preta.png" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-right" onclick="slideTo(2, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="../public/img/camisetas/c_martelo_mescla.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_martelo_mescla.png" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(3, '#owl-venda')">
@@ -243,7 +243,7 @@
 </footer>
 
 <div class="modal fade modal-venda" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-dialog modal-md" role="document">
         <div class="modal-content modal-content-votacao ff-lato">
             Tabela de Medidas
             <img src="../public/img/tabela.png" alt="Tabela de Medidas" class="img-responsive">
