--- a/index.html
+++ b/index.html
@@ -194,29 +194,29 @@
         <ul class="col-xs-12 no-padding"> 
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
-                    <a href="">
-                        <img src="public/img/estampa1.jpg" class="img-responsive transition" alt="Estampa 1" title="Estampa 1">
+                    <a href="internas/camisetas_interno.html">
+                        <img src="public/img/estampa1.png" class="img-responsive transition" alt="Estampa 1" title="Estampa 1">
                     </a>
                 </div>
             </li>
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    <a href="internas/camisetas_interno2.html">
+                        <img src="public/img/estampa2.png" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
             </li>
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
-                    <a href="">
-                        <img src="public/img/estampa3.jpg" class="img-responsive transition" alt="Estampa 3" title="Estampa 3">
+                    <a href="internas/camisetas_interno3.html">
+                        <img src="public/img/estampa3.png" class="img-responsive transition" alt="Estampa 3" title="Estampa 3">
                     </a>
                 </div>
             </li>
             <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
-                    <a href="">
-                        <img src="public/img/estampa4.jpg" class="img-responsive transition" alt="Estampa 4" title="Estampa 4">
+                    <a href="internas/camisetas_interno4.html">
+                        <img src="public/img/estampa4.png" class="img-responsive transition" alt="Estampa 4" title="Estampa 4">
                     </a>
                 </div>
             </li>
@@ -231,20 +231,9 @@
                     <img src="public/img/artista1.png" class="img-responsive" alt="" title="">
                 </div>
                 <div id="info-votacao1" class="col-xs-8 no-padding">
-                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Bruna Farias</h3>
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Bruna Farias - 18 anos - Porto Alegre RS</h3>
                     <p id="texto-votacao1" class="col-xs-12 no-padding texto-votacao ff-ptsans">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Bruna acabou de ser aprovada na faculdade de Artes Visuais. Sempre soube que queria tornar profissão o amor que tem pela ilustração. Interessou-se há pouco tempo pela temática da coleção e isso influenciou muito seu processo de criação. Bruna se diz admiradora do Projeto Canvas e está torcendo para ser a escolhida. Suas ilustrações foram escolhida pois adotam uma estética minimalista e contemporânea. 
                     </p>
                     <span onclick="abreTexto(1, this)" class="btn-ver-mais ff-lato">Ver mais</span>
                     <div id="owl-votacao1" class="col-xs-12 no-padding">
@@ -277,20 +266,9 @@
                     <img src="public/img/artista2.png" class="img-responsive" alt="" title="">
                 </div>
                 <div id="info-votacao2" class="col-xs-8 no-padding">
-                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Anna Machado</h3>
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Anna Machado - 25 anos - Rio de Janeiro RJ</h3>
                     <p id="texto-votacao2" class="col-xs-12 no-padding texto-votacao ff-ptsans">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Anna é formada em Psicologia mas sua grande paixão sempre foi a arte. Dedica seu tempo livre à ilustração e também é amante da gastronomia. Acredita que o Projeto Canvas possa desenvolver o lado criativo das mulheres e divulgar novos talentos. Suas frases curtas foram escolhidas pois causam impacto e reforçam ideais de luta e resistência.
                     </p>
                     <span onclick="abreTexto(2, this)" class="btn-ver-mais ff-lato">Ver mais</span>
                     <div id="owl-votacao2" class="col-xs-12 no-padding">
@@ -323,20 +301,9 @@
                     <img src="public/img/artista3.png" class="img-responsive" alt="" title="">
                 </div>
                 <div id="info-votacao3" class="col-xs-8 no-padding">
-                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Livia Ferreira</h3>
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Vitória Santos Cruz - 22 anos - Maringa PR</h3>
                     <p id="texto-votacao3" class="col-xs-12 no-padding texto-votacao ff-ptsans">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Vitória está cursando o último ano de Comunicação e Multimeios. Desde criança desenhava e hoje faz isso profissionalmente. Vitória diz que esse espaço ainda é dominado pelos homens, que raramente são receptivos às artistas mulheres. Acredita que o Projeto Canvas possa criar novas possibilidades de exposição e dar visibilidade às mulheres que estão nessa luta.
                     </p>
                     <span onclick="abreTexto(3, this)" class="btn-ver-mais ff-lato">Ver mais</span>
                     <div id="owl-votacao3" class="col-xs-12 no-padding">
