--- a/internas/camisetas_interno.html
+++ b/internas/camisetas_interno.html
@@ -167,7 +167,7 @@
                     <img src="../public/img/camisetas/c_faca_chumbo.jpg" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="../public/img/camisetas/c_faca_mescla.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_faca_mescla.png" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
                     <img src="../public/img/camisetas/c_faca_branca.jpg" alt="Owl Image">
@@ -186,7 +186,7 @@
                 </li>
                 <li class="col-xs-3 no-padding-right" onclick="slideTo(2, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="../public/img/camisetas/c_faca_mescla.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_faca_mescla.png" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(3, '#owl-venda')">
@@ -245,7 +245,7 @@
 </footer>
 
 <div class="modal fade modal-venda" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-dialog modal-md" role="document">
         <div class="modal-content modal-content-votacao ff-lato">
             Tabela de Medidas
             <img src="../public/img/tabela.png" alt="Tabela de Medidas" class="img-responsive">
