--- a/internas/camisetas_interno2.html
+++ b/internas/camisetas_interno2.html
@@ -162,7 +162,7 @@
                     <img src="../public/img/camisetas/c_gasolina_principal.jpg" alt="">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="../public/img/camisetas/c_gasolina_preta.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_gasolina_preta.png" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
                     <img src="../public/img/camisetas/c_gasolina_chumbo.jpg" alt="Owl Image">
@@ -179,7 +179,7 @@
                 </li>
                 <li class="col-xs-3 no-padding-right" onclick="slideTo(1, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="../public/img/camisetas/c_gasolina_preta.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_gasolina_preta.png" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(2, '#owl-venda')">
@@ -243,7 +243,7 @@
 </footer>
 
 <div class="modal fade modal-venda" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-dialog modal-md" role="document">
         <div class="modal-content modal-content-votacao ff-lato">
             Tabela de Medidas
             <img src="../public/img/tabela.png" alt="Tabela de Medidas" class="img-responsive">
