--- a/internas/camisetas_interno3.html
+++ b/internas/camisetas_interno3.html
@@ -162,13 +162,13 @@
                     <img src="../public/img/camisetas/c_lenco_principal.jpg" alt="">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="../public/img/camisetas/c_lenco_preta.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_lenco_preta.png" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
                     <img src="../public/img/camisetas/c_lenco_chumbo.jpg" alt="Owl Image">
                 </div>
                 <div class="imgLiquid imgLiquidFill img-venda">
-                    <img src="../public/img/camisetas/c_lenco_mescla.jpg" alt="Owl Image">
+                    <img src="../public/img/camisetas/c_lenco_mescla.png" alt="Owl Image">
                 </div>
             </div>
             <ul class="owl-thumbs col-xs-12 no-padding">
@@ -179,7 +179,7 @@
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(1, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="../public/img/camisetas/c_lenco_preta.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_lenco_preta.png" alt="Owl Image">
                     </div>
                 </li>
                 <li class="col-xs-3 no-padding-half" onclick="slideTo(2, '#owl-venda')">
@@ -189,7 +189,7 @@
                 </li>
                 <li class="col-xs-3 no-padding-right" onclick="slideTo(3, '#owl-venda')">
                     <div class="imgLiquid imgLiquidFill thumb-venda">
-                        <img src="../public/img/camisetas/c_lenco_mescla.jpg" alt="Owl Image">
+                        <img src="../public/img/camisetas/c_lenco_mescla.png" alt="Owl Image">
                     </div>
                 </li>
             </ul>
@@ -243,7 +243,7 @@
 </footer>
 
 <div class="modal fade modal-venda" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-dialog modal-md" role="document">
         <div class="modal-content modal-content-votacao ff-lato">
             Tabela de Medidas
             <img src="../public/img/tabela.png" alt="Tabela de Medidas" class="img-responsive">
